# wasm-demo

./: CMakeLists.txt  README.md  index.html  index.js  index.wasm  index2.html  index2.js  index2.wasm  main.c  main2.c  main_bind.cpp  util.c
template/: shell_minimal.html
templates/: ccall.html  embind.html
